--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.0"
+    "discord.js": "^14.14.0",
+    "fs-extra": "^11.2.0"
   },
   "engines": {
     "node": ">=18"
