--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "discord.js": "^14.14.0",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18"
